k8s/apps/dev/echoserver/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: echoserver
spec:
  type: ClusterIP
  selector:
    app: echoserver
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
