k8s/apps/dev/echoserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
#    ingress.kubernetes.io/oauth: oauth2_proxy
    ingress.kubernetes.io/ssl-redirect: true
    ingress.kubernetes.io/ssl-passthrough: false
    ingress.kubernetes.io/auth-url: "https://auth2.emisia.net/oauth2/auth"
    ingress.kubernetes.io/auth-signin: "https://auth2.emisia.net/oauth2/start" #?rd=https%3A%2F%2Fecho.emisia.net" #?rd=https%3A%2F%2F$host$request_uri"
    ingress.kubernetes.io/auth-headers-succeed: "x-auth-request-user, x-auth-request-email, x-auth-request-access-token"
  name: echoserver
  namespace: echoserver
spec:
  ingressClassName: haproxy
  tls:
    - secretName: cert-echo-production
      hosts:
        - echo.emisia.net
  rules:
  - host: echo.emisia.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echoserver
            port:
              number: 8080
